# boilerplates

./: README.md
ansible/: packages.yml
python/: cookiecutter.json
python/{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE.md  README.md  flake.nix  pyproject.toml  shell.nix
python/{{ cookiecutter.project_slug }}/notebooks/: environment.yml  requirements.yml
python/{{ cookiecutter.project_slug }}/tests/: test_dummy.py
